--- a/www/css/index.css
+++ b/www/css/index.css
@@ -15,6 +15,8 @@ body {
     margin:0px;
     padding:0px;
     width:100%;
+	
+	-webkit-text-size-adjust: none;
 }
 
 /* Portrait layout (default) */
@@ -26,10 +28,12 @@ body {
 	display: block;
 }
 
-div.cordova-loading { text-align: center; width: 90%; height: 100%; overflow: hidden;  margin: 0 auto 0 auto; color: #555; }
+div.cordova-loading { text-align: center; width: 90%; height: 100%; overflow: hidden;  margin: 0 auto 0 auto; color: #555; display: none; }
 div.cordova-loading > img { height: auto; max-width: 100%; margin-top: 65%; }
 div.cordova-loading > h1 { font-size: 3em; }
 div.cordova-loading p { font-size: 1.8em; }
+
+div.cordova-loading span.app-uuid { font-size: 0.55em; position: absolute; bottom: 10px; right: 15px; display: block; text-align: center; padding: 0; margin: 0; z-index: 999999; }
 
 @keyframes fade {
     from { opacity: 1.0; }
