--- a/www/css/index.css
+++ b/www/css/index.css
@@ -15,12 +15,12 @@ body {
     margin:0px;
     padding:0px;
     width:100%;
-	
+
 	-webkit-text-size-adjust: none;
 }
 
 /* Portrait layout (default) */
-.app {
+#cordova-app {
     width: 100%;
 	height: 100%;
 	padding: 0;
@@ -28,26 +28,39 @@ body {
 	display: block;
 }
 
-div.cordova-loading { text-align: center; width: 90%; height: 100%; overflow: hidden;  margin: 0 auto 0 auto; color: #555; display: none; }
-div.cordova-loading > img { height: auto; max-width: 100%; margin-top: 65%; }
-div.cordova-loading > h1 { font-size: 3em; }
-div.cordova-loading p { font-size: 1.8em; }
+#cordova-app div.cordova-loading {
+    text-align: center;
+    width: 90%;
+    height: 100%;
+    overflow: hidden;
+    margin: 0 auto 0 auto;
+    color: #555;
+    display: block;
+    opacity: 0;
 
-div.cordova-loading span.app-uuid { font-size: 0.55em; position: absolute; bottom: 10px; right: 15px; display: block; text-align: center; padding: 0; margin: 0; z-index: 999999; }
+    -webkit-transition: 0.8s opacity ease;
+    transition: 0.8s opacity ease;
+}
+#cordova-app div.cordova-loading.visible { opacity: 1; }
+#cordova-app div.cordova-loading > img { height: auto; max-width: 100%; margin-top: 65%; }
+#cordova-app div.cordova-loading > h1 { font-size: 3em; }
+#cordova-app div.cordova-loading p { font-size: 1.8em; }
 
-@keyframes fade {
+#cordova-app div.cordova-loading span.app-uuid { font-size: 0.55em; position: absolute; bottom: 10px; right: 15px; display: block; text-align: center; padding: 0; margin: 0; z-index: 999999; }
+
+@keyframes cordova-fade {
     from { opacity: 1.0; }
     50% { opacity: 0.3; }
     to { opacity: 1.0; }
 }
- 
-@-webkit-keyframes fade {
+
+@-webkit-keyframes cordova-fade {
     from { opacity: 1.0; }
     50% { opacity: 0.3; }
     to { opacity: 1.0; }
 }
- 
-.blink {
-    animation:fade 3000ms infinite;
-    -webkit-animation:fade 3000ms infinite;
+
+#cordova-app .blink {
+    animation: cordova-fade 3000ms infinite;
+    -webkit-animation: cordova-fade 3000ms infinite;
 }
