--- a/www/css/index.css
+++ b/www/css/index.css
@@ -7,9 +7,8 @@ body {
     -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
     -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
     -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
-    background-color: #BBB;
-	color: #FBFBFB;
-    font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
+    background: #bbb;
+    font-family: sans-serif;
     font-size:1em;
     height:100%;
     margin:0px;
