--- a/www/css/index.css
+++ b/www/css/index.css
@@ -19,7 +19,7 @@ body {
 }
 
 /* Portrait layout (default) */
-#cordova-app {
+#feedback-root {
     width: 100%;
 	height: 100%;
 	padding: 0;
@@ -27,7 +27,7 @@ body {
 	display: block;
 }
 
-#cordova-app div.cordova-loading {
+#feedback-root div.cordova-loading {
     text-align: center;
     width: 90%;
     height: 100%;
@@ -40,12 +40,12 @@ body {
     -webkit-transition: 0.8s opacity ease;
     transition: 0.8s opacity ease;
 }
-#cordova-app div.cordova-loading.visible { opacity: 1; }
-#cordova-app div.cordova-loading > img { height: auto; max-width: 100%; margin-top: 65%; }
-#cordova-app div.cordova-loading > h1 { font-size: 3em; }
-#cordova-app div.cordova-loading p { font-size: 1.8em; }
+#feedback-root div.cordova-loading.visible { opacity: 1; }
+#feedback-root div.cordova-loading > img { height: auto; max-width: 100%; margin-top: 65%; }
+#feedback-root div.cordova-loading > h1 { font-size: 3em; }
+#feedback-root div.cordova-loading p { font-size: 1.8em; }
 
-#cordova-app div.cordova-loading span.app-uuid { font-size: 0.55em; position: absolute; bottom: 10px; right: 15px; display: block; text-align: center; padding: 0; margin: 0; z-index: 999999; }
+#feedback-root div.cordova-loading span.app-uuid { font-size: 0.55em; position: absolute; bottom: 10px; right: 15px; display: block; text-align: center; padding: 0; margin: 0; z-index: 999999; }
 
 @keyframes cordova-fade {
     from { opacity: 1.0; }
@@ -59,7 +59,7 @@ body {
     to { opacity: 1.0; }
 }
 
-#cordova-app .blink {
+#feedback-root .cordova-loading .blink {
     animation: cordova-fade 3000ms infinite;
     -webkit-animation: cordova-fade 3000ms infinite;
 }
