--- a/www/css/index.css
+++ b/www/css/index.css
@@ -1,9 +1,9 @@
-html.default-state * {
+html.app-not-ready * {
     -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
 }
 
-html.default-state { width: 100%; height: 100%; padding: 0; margin: 0; }
-html.default-state body {
+html.app-not-ready { width: 100%; height: 100%; padding: 0; margin: 0; }
+html.app-not-ready body {
     -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
     -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
     -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
@@ -18,16 +18,26 @@ html.default-state body {
 	-webkit-text-size-adjust: none;
 }
 
-/* Portrait layout (default) */
-html.default-state #feedback-root {
+html.app-not-ready #cordova-app {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 10000000;
+    background: #bbb;
+
     width: 100%;
 	height: 100%;
+
 	padding: 0;
 	margin: 0;
 	display: block;
 }
 
-html.default-state #feedback-root div.cordova-loading {
+html:not(.app-not-ready) #cordova-app {
+    display: none;
+}
+
+html.app-not-ready #cordova-app div.cordova-loading {
     text-align: center;
     width: 90%;
     height: 100%;
@@ -40,12 +50,12 @@ html.default-state #feedback-root div.cordova-loading {
     -webkit-transition: 0.8s opacity ease;
     transition: 0.8s opacity ease;
 }
-html.default-state #feedback-root div.cordova-loading.visible { opacity: 1; }
-html.default-state #feedback-root div.cordova-loading > img { height: auto; max-width: 100%; margin-top: 65%; }
-html.default-state #feedback-root div.cordova-loading > h1 { font-size: 3em; }
-html.default-state #feedback-root div.cordova-loading p { font-size: 1.8em; }
+html.app-not-ready #cordova-app div.cordova-loading.visible { opacity: 1; }
+html.app-not-ready #cordova-app div.cordova-loading > img { height: auto; max-width: 100%; margin-top: 65%; }
+html.app-not-ready #cordova-app div.cordova-loading > h1 { font-size: 3em; }
+html.app-not-ready #cordova-app div.cordova-loading p { font-size: 1.8em; }
 
-html.default-state #feedback-root div.cordova-loading span.app-uuid { font-size: 0.55em; position: absolute; bottom: 10px; right: 15px; display: block; text-align: center; padding: 0; margin: 0; z-index: 999999; }
+html.app-not-ready #cordova-app div.cordova-loading span.app-uuid { font-size: 0.55em; position: absolute; bottom: 10px; right: 15px; display: block; text-align: center; padding: 0; margin: 0; z-index: 999999; }
 
 @keyframes cordova-fade {
     from { opacity: 1.0; }
@@ -59,7 +69,7 @@ html.default-state #feedback-root div.cordova-loading span.app-uuid { font-size:
     to { opacity: 1.0; }
 }
 
-html.default-state #feedback-root .cordova-loading .blink {
+html.app-not-ready #cordova-app .cordova-loading .blink {
     animation: cordova-fade 3000ms infinite;
     -webkit-animation: cordova-fade 3000ms infinite;
 }
