--- a/www/css/index.css
+++ b/www/css/index.css
@@ -1,53 +1,87 @@
-* {
+html.app-not-ready * {
     -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
 }
 
-html { width: 100%; height: 100%; padding: 0; margin: 0; }
-body {
+html.app-not-ready { width: 100%; height: 100%; padding: 0; margin: 0; }
+html.app-not-ready body {
     -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
     -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
     -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
-    background-color: #BBB;
-	color: #FBFBFB;
-    font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
+    background: #bbb;
+    font-family: sans-serif;
     font-size:1em;
     height:100%;
     margin:0px;
     padding:0px;
     width:100%;
-	
+
 	-webkit-text-size-adjust: none;
 }
 
-/* Portrait layout (default) */
-.app {
+html.app-not-ready #cordova-app {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 10000000;
+    background: #bbb;
+
     width: 100%;
 	height: 100%;
+
 	padding: 0;
 	margin: 0;
 	display: block;
 }
 
-div.cordova-loading { text-align: center; width: 90%; height: 100%; overflow: hidden;  margin: 0 auto 0 auto; color: #555; display: none; }
-div.cordova-loading > img { height: auto; max-width: 100%; margin-top: 65%; }
-div.cordova-loading > h1 { font-size: 3em; }
-div.cordova-loading p { font-size: 1.8em; }
+html:not(.app-not-ready) #cordova-app {
+    display: none;
+}
 
-div.cordova-loading span.app-uuid { font-size: 0.55em; position: absolute; bottom: 10px; right: 15px; display: block; text-align: center; padding: 0; margin: 0; z-index: 999999; }
+html.app-not-ready #cordova-app div.cordova-loading {
+    text-align: center;
+    width: 90%;
+    height: 100%;
+    overflow: hidden;
+    margin: 0 auto 0 auto;
+    color: #555;
+    display: block;
+    opacity: 0;
 
-@keyframes fade {
+    -webkit-transition: 0.8s opacity ease;
+    transition: 0.8s opacity ease;
+}
+html.app-not-ready #cordova-app div.cordova-loading.visible { opacity: 1; }
+html.app-not-ready #cordova-app div.cordova-loading > img { height: auto; max-width: 100%; margin-top: 65%; }
+html.app-not-ready #cordova-app div.cordova-loading > h1 { font-size: 3em; }
+html.app-not-ready #cordova-app div.cordova-loading p { font-size: 1.8em; }
+
+html.app-not-ready #cordova-app div.cordova-loading span.app-uuid { font-size: 0.55em; position: absolute; bottom: 10px; right: 15px; display: block; text-align: center; padding: 0; margin: 0; z-index: 999999; }
+
+@keyframes cordova-fade {
     from { opacity: 1.0; }
     50% { opacity: 0.3; }
     to { opacity: 1.0; }
 }
- 
-@-webkit-keyframes fade {
+
+@-webkit-keyframes cordova-fade {
     from { opacity: 1.0; }
     50% { opacity: 0.3; }
     to { opacity: 1.0; }
 }
- 
-.blink {
-    animation:fade 3000ms infinite;
-    -webkit-animation:fade 3000ms infinite;
+
+html.app-not-ready #cordova-app .cordova-loading .blink {
+    animation: cordova-fade 3000ms infinite;
+    -webkit-animation: cordova-fade 3000ms infinite;
+}
+
+@font-face {
+  font-family: 'FontAwesome';
+  src: url('../fonts/font-awesome/fontawesome-webfont.eot');
+  src: url('../fonts/font-awesome/fontawesome-webfont.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/font-awesome/fontawesome-webfont.woff2') format('woff2'),
+    url('../fonts/font-awesome/fontawesome-webfont.woff') format('woff'),
+    url('../fonts/font-awesome/fontawesome-webfont.ttf') format('truetype'),
+    url('../fonts/font-awesome/fontawesome-webfont.svg#fontawesomeregular') format('svg');
+  font-weight: normal;
+  font-style: normal;
 }
